<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smooth System Progress Bars</string>

    <string-array name="interpolators">
        <item>Accelerate</item>
        <item>Linear</item>
        <item>AccelerateDecelerate</item>
        <item>Decelerate</item>
    </string-array>
    
    <string-array name="circular_style">
        <item>Rounded</item>
        <item>Normal</item>
    </string-array>

    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="opacity">Opacity</string>
    <string name="preview">Preview</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="invalid_color">Invalid color</string>
    
    <string name="item_successfully_saved">Items successfully saved!</string>
    <string name="scroll_down_hint">Scroll down the list to add more colors</string>
    <string name="reversed">Reversed</string>
    <string name="mirror_mode">Mirror mode</string>
    <string name="gradients">Gradients</string>
    <string name="speed">Speed: %s</string>
    <string name="factor">Speed factor: %s</string>
    <string name="stroke_width">Stroke width: %ddp</string>
    <string name="separator_length">Separator length: %ddp</string>
    <string name="sections_count">Sections count: %s</string>
    <string name="interpolator">Interpolator:</string>
    <string name="c_style">Style:</string>
    <string name="xposed_description">Replaces ProgressBar with a smoother implementation</string>
    <string name="tap_to_add">Tap to add color</string>
    <string name="tap_to_change">Tap to change color</string>
    <string name="hold_to_revert">Tap to change or hold to set default color</string>
    <string name="hold_to_delete">Tap to change or hold to delete</string>
    
    <!-- Settings -->
	
	<string name="prefs">Settings</string>
	<string name="general_prefs">Settings</string>
	<string name="pref_enable_horizontal_title">Horizontal MOD</string>
	<string name="pref_enable_horizontal_summary">Enable or disable the horizontal custom progress bar</string>
	<string name="pref_enable_circular_title">Circular MOD</string>
	<string name="pref_enable_circular_summary">Enable or disable the circular custom progress bar</string>
	<string name="pref_hide_launcher_icon_title">Hide launcher icon</string>
    <string name="pref_hide_launcher_icon_summary">May require launcher restart</string>
    <string name="reboot_required">Change will be applied after reboot</string>
    
    <!-- Navigation Drawer -->
    
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="support">Help and feedback</string>
    <string name="donate">Donate</string>
	
</resources>
