<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >
    
<include android:id="@+id/tool_bar" layout="@layout/tool_bar" ></include>

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff333333"
    android:padding="16dp" >
    
    <LinearLayout
        android:id="@+id/rlcolorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llHexPicker"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical" >

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:fadeScrollbars="false" >
            
		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:orientation="vertical" >
	            
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
		
		            <TextView
		                android:id="@+id/textView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="4dp"
		                android:text="@string/saturation" />
		
		            <com.larswerkman.holocolorpicker.SaturationBar
		                android:id="@+id/saturationbar"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content" />
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
		
		            <TextView
		                android:id="@+id/TextView01"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="4dp"
		                android:text="@string/value" />
		
		            <com.larswerkman.holocolorpicker.ValueBar
		                android:id="@+id/valuebar"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content" />
		        </LinearLayout>
		
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical" >
		
		            <TextView
		                android:id="@+id/TextView02"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:padding="4dp"
		                android:text="@string/opacity" />
		
		            <com.larswerkman.holocolorpicker.OpacityBar
		                android:id="@+id/opacitybar"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content" />
		        </LinearLayout>
			</LinearLayout>
		</ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@id/llHexPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llApplyColor"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp" >

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:maxLength="8" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/bApplyColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/apply" />

    </LinearLayout>

    <LinearLayout
        android:id="@id/llApplyColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="3dp"
        android:orientation="vertical" >
		
        <Button
            android:id="@+id/bPreviewColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#00000000"
            android:text="@string/preview" />
    </LinearLayout>
</RelativeLayout>
</LinearLayout>